@@ -308,6 +308,7 @@ class PythonAction(BaseAction):
             self.result = returned_value
         elif isinstance(returned_value, dict):
             self.values = returned_value
+            self.result = returned_value
         else:
             return TaskError("Python Task error: '%s'. It must return:\n"
                              "False for failed task.\n"
